# x_qb_mistral_hackathon

./: .env  .gitignore  README.md  credentials.json  embedding.ipynb  main.py  pyproject.toml  python3 gift_recommendation_chatbot.py  requirements.txt  test_chatbot_simple.py
app/: __init__.py  chatbot.py  config.py  data_loader.py  mistral_integration.py  recommendation.py  storage.py  ui.py  wishlist.py
data/: Gifts_dataset_final.ipynb  amazon_dataset.ipynb  create_new_dataset.py  data_gifts.csv  embedding.ipynb  embedding_2.ipynb  recommendations.csv
src/x_qb_mistral_hackathon/: __init__.py  data_loader.py  mistral_integration.py  rag_engine.py  storage.py  ui.py  wishlist.py
tests/: test_chatbot.py  test_main.py  test_storage.py  test_ui.py
